[package]
name = "acolyte"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.99", features = ["backtrace"] }
libc = "0.2.175"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
# reqwest instead of libcurl, rustls instead of expecting openssl, the rest are Sentry features we want
sentry = { version = "0.42.0", default-features = false, features = ["tracing", "reqwest", "rustls", "backtrace", "panic"] }
sentry-tracing = "0.42.0"
uuid = { version = "1.18.1", features = ["v4"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

[dev-dependencies]
mockall = "0.13.1"
tempfile = "3.22.0"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
panic = "unwind"   # tested that Sentry can still report panics without "unwind", but we want to manage restarting ourselves
strip = true       # false = keep main debug symbols so we get function names in Sentry, true = a bunch of `?`
debug = 0          # remove debug details for size, could be (1) = func call line numbers, (2) = variables
